<resources>
    <string name="app_name">YemekSiparisApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sepete_ekle">Sepete Ekle</string>
    <string name="menu">Menu</string>
    <string name="time_30m">30 min</string>
    <string name="star_4_5">4.5</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex.</string>
    <string name="_0">0</string>
    <string name="currency_tl">₺</string>
</resources>