<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".ui.screen.FoodDetailFragment">

    <View
        android:id="@+id/whiteBottomPanel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_corners_white_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/backImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="42dp"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/favoriteImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/favorite_icon"
        app:layout_constraintBottom_toBottomOf="@id/backImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/backImageView"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/foodImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ayran"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="320dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/whiteBottomPanel" />

    <TextView
        android:id="@+id/foodNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black_100"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/foodPriceTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/foodImageView"
        tools:text="Musakka" />

    <TextView
        android:id="@+id/foodPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:textColor="@color/orange"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/foodNameTextView"
        app:layout_constraintTop_toBottomOf="@id/foodImageView"
        tools:text="24" />

    <TextView
        android:id="@+id/foodCurrencyTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:text="@string/currency_tl"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/foodPriceTextView"
        app:layout_constraintTop_toTopOf="@id/foodPriceTextView" />

    <LinearLayout
        android:id="@+id/startAndTimeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:spacing="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/foodNameTextView">

        <com.google.android.material.chip.Chip
            android:id="@+id/timeChip"
            style="@style/Widget.Material3.Chip.Assist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_30m"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:chipBackgroundColor="@color/orange"
            app:chipIcon="@drawable/time_icon"
            app:chipIconTint="@color/white"
            app:chipStrokeWidth="0dp"
            app:iconStartPadding="4dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/starChip"
            style="@style/Widget.Material3.Chip.Assist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/star_4_5"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:chipBackgroundColor="@color/orange"
            app:chipIcon="@drawable/star_icon"
            app:chipIconTint="@color/white"
            app:chipStrokeWidth="0dp"
            app:iconStartPadding="4dp" />
    </LinearLayout>


    <TextView
        android:id="@+id/aboutTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="About"
        android:textColor="@color/black_100"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startAndTimeLayout" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:lineHeight="32dp"
        android:text="@string/lorem_ipsum"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutTitleTextView" />

    <LinearLayout
        android:id="@+id/quantityLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_orange_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/addToCartButton"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/minusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="4dp"
            android:background="@drawable/rounded_orange_button_bg"
            android:contentDescription="Miktarı azalt"
            android:src="@drawable/minus_icon"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/quantityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/_0"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/plusButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="4dp"
            android:background="@drawable/rounded_orange_button_bg"
            android:contentDescription="Miktarı artır"
            android:src="@drawable/baseline_add_24"
            app:tint="@android:color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/totalPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/orange"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/addToCartButton"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="24" />

    <TextView
        android:id="@+id/totalCurrencyTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:text="@string/currency_tl"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/totalPriceTextView"
        app:layout_constraintTop_toTopOf="@id/totalPriceTextView" />


    <Button
        android:id="@+id/addToCartButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="12dp"
        android:minHeight="48dp"
        android:padding="24dp"
        android:text="@string/add_to_cart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>